# Models_Assemble

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/ma-cli/: Cargo.toml
crates/ma-cli/src/: main.rs
crates/ma-core/: Cargo.toml
crates/ma-core/src/: adapter.rs  config.rs  error.rs  lib.rs  normalized.rs  protocol.rs  provider_test.rs
crates/ma-server/: Cargo.toml
crates/ma-server/src/: auth.rs  error.rs  fallback.rs  lib.rs
crates/ma-server/src/adapters/: anthropic.rs  mock.rs  mod.rs  openai.rs  tool_mapping.rs
crates/ma-server/src/handlers/: anthropic.rs  health.rs  mod.rs  openai.rs
crates/ma-server/src/middleware/: request_id.rs
crates/ma-server/src/tests/: mod.rs  normalized_test.rs
docs/: architecture-plan.html  architecture-plan.md  frontend-tauri-plan.md  migration.md
examples/: config.example.yaml
