[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/ma-cli",
    "crates/ma-core",
    "crates/ma-server",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/example/models-assemble"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures-util = "0.3.31"
http = "1.4.0"
ma-core = { path = "crates/ma-core" }
ma-server = { path = "crates/ma-server" }
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.8", features = ["trace"] }
async-trait = "0.1.88"
tracing = "0.1.43"
uuid = { version = "1.16.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
