[package]
name = "ma-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3.6"
async-trait.workspace = true
axum.workspace = true
bytes = "1.11.1"
futures-util.workspace = true
http.workspace = true
ma-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
mockito = "1.7.0"
