[package]
name = "models-assemble-desktop"
version = "0.1.0"
description = "Models Assemble desktop control panel"
edition = "2024"

[lib]
name = "models_assemble_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
axum.workspace = true
ma-core = { path = "../../../crates/ma-core" }
ma-server = { path = "../../../crates/ma-server" }
reqwest.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.4"
tokio = { workspace = true, features = ["sync"] }
